refactor(workflow): align security module conventions